Add ForeCast Feature

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-APP_TOKEN=MTExNjM4NzA3NzUwNDg5MzEwMA.Guvk4f.gin93O4hUb9Eq5KVeI8vagcJ4emQWnSvIPMY6E
+APP_TOKEN=MTExNjM4NzA3NzUwNDg5MzEwMA.GOHl44.pG8W631aSamGWPIWqLsSKt1Ovi8di2O2JEb_9g
