add git ignore file

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-APP_TOKEN=MTExNjM4NzA3NzUwNDg5MzEwMA.GOHl44.pG8W631aSamGWPIWqLsSKt1Ovi8di2O2JEb_9g
+APP_TOKEN=MTExNjM4NzA3NzUwNDg5MzEwMA.GIM_SS.C_TpFObkUfwPUqo5twHogJvjHOwUFZR7lJSYc4
