--- a/docker-compose.db.yml
+++ b/docker-compose.db.yml
@@ -2,4 +2,11 @@ version: '3.8'
 
 name: "discord-badzbot"
 
-service:
+services:
+  bot-db:
+    image: mongo
+    ports:
+      -27700:27017
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: 123456
