--- a/docker-compose.db.yml
+++ b/docker-compose.db.yml
@@ -5,8 +5,9 @@ name: "discord-badzbot"
 services:
   bot-db:
     image: mongo
+    container_name: bot-db
     ports:
-      -27700:27017
+      - 27700:27017
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: 123456
